minor change to film class